# amber

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: chart.py
examples/: flightdeck_downloads.rs  generate_repository.rs
migrations/: 20250115000000_init.sql  20250115000000_tables.sql  20250117000000_views.sql  20250120000000_indices.sql
proto/: grpc.proto  invariable.proto
scripts/: update-grpc.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: add.rs  config.rs  errors.rs  export.rs  fs.rs  fsck.rs  init.rs  missing.rs  mod.rs  orphaned.rs  pipe.rs  pull.rs  push.rs  remote.rs  serve.rs  status.rs  sync.rs
src/connection/: config.rs  local.rs  mod.rs  rclone.rs  ssh.rs
src/db/: cleaner.rs  database.rs  db.rs  error.rs  kv.rs  kvstore.rs  logs.rs  logstore.rs  migrations.rs  mod.rs  models.rs  redb_history.rs  redb_store.rs  reduced.rs  schema.rs  scratch.rs  test_utils.rs  versioning.rs  virtual_filesystem.rs
src/db/migrations/: 20250115000000_init.sql  20250117000000_views.sql  20250120000000_indices.sql
src/db/stores/: guard.rs  kv.rs  log.rs  mod.rs  options.rs  reduced.rs
src/db/tests/: database.rs  database_vfs.rs  helper.rs  mod.rs
src/flightdeck/: base.rs  file_manager.rs  flightdeck.rs  global.rs  layout.rs  mod.rs  observation.rs  observer.rs  output.rs  process_manager.rs  progress_manager.rs  stream.rs  terminal_manager.rs  tracer.rs
src/flightdeck/pipes/: file.rs  mod.rs  progress_bars.rs  terminal.rs
src/flightdeck/tracked/: mod.rs  sender.rs  stream.rs
src/grpc/: auth.rs  mod.rs  server.rs  service.rs  types.rs
src/logic/: add.rs  assimilate.rs  blobify.rs  connect.rs  files.rs  fs.rs  fsck_local.rs  fsck_remote.rs  materialise.rs  mod.rs  orphaned.rs  state.rs  sync.rs  transfer.rs  unblobify.rs
src/repository/: connection.rs  grpc.rs  local.rs  local_repository.rs  mod.rs  parquet.rs  rclone.rs  repository.rs  traits.rs  transfer.rs  wrapper.rs
src/repository/logic/: assimilate.rs  blobify.rs  checkout.rs  connect.rs  files.rs  materialise.rs  mod.rs  state.rs  sync.rs  transfer.rs
src/repository/rclone/: mod.rs  parquet.rs
src/transport/: client.rs  mod.rs  server.rs
src/utils/: app_error.rs  blake3.rs  buffer_adaptive_unordered.rs  control_flow.rs  errors.rs  flow.rs  fs.rs  internal_error.rs  mod.rs  path.rs  pipe.rs  port.rs  rclone.rs  redb_bridge.rs  sha256.rs  ssh.rs  stream.rs  tracker.rs  units.rs  walker.rs
tests/: dsl_definition.rs  integration_add.rs  integration_config.rs  integration_dsl.rs  integration_fs.rs  integration_fsck_local.rs  integration_fsck_remote.rs  integration_missing.rs  integration_orphaned.rs  integration_remote_local.rs  integration_remote_rclone.rs  integration_remote_ssh.rs  integration_resilience.rs  integration_status.rs  integration_sync.rs
tests/dsl_definition/: amber.rs  asserts.rs  db.rs  fs.rs  mod.rs  parser.rs  redb.rs  ssh.rs  types.rs  writer.rs
