[package]
name = "amber"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-lock = "3.4"
async-stream = "0.3"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cipher = { version = "0.4", features = ["rand_core"] }
clap = { version = "4.5", features = ["derive", "color", "suggestions", "env"] }
colored = "3.0"
comfy-table = "7.1"
ctr = "0.9"
dashmap = "6.1"
derive_builder = "0.20"
env_logger = "0.11"
filetime = "0.2"
fs2 = "0.4"
futures = "0.3"
futures-core = "0.3"
ignore = "0.4"
indexmap = "2.8"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
log = "0.4"
once_cell = "1.21"
pin-project-lite = "0.2"
prost = "0.14"
prost-types = "0.14"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
rayon = "1.11"
russh = "0.54"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["asm"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1.16", features = ["v4", "v5", "v7"] }

[dev-dependencies]
anyhow = "1.0"
russh-sftp = ">=2.0.8"
serial_test = "3.2"

[build-dependencies]
tonic-prost-build = "0.14"

[profile.release]
opt-level = 3         # Enables maximum optimisation
debug = false         # Removes debug information to reduce binary size
lto = true            # Enables Link Time Optimisation for better performance
codegen-units = 1     # Improves optimisation by allowing the compiler to optimise across the entire crate
panic = 'abort'       # Reduces binary size and potentially improves performance by aborting on panic
