[package]
name = "amber"
version = "0.1.0"
edition = "2024"

[features]
default = []
__kv-drop-dev-assert = []

[dependencies]
aes = "0.8"
async-compression = { version = "0.4", default-features = false, features = ["tokio", "gzip"] }
async-stream = "0.3"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
bincode = "1.3"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
cipher = { version = "0.4", features = ["rand_core"] }
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
ctr = "0.9"
dashmap = "6"
derive_builder = "0.20"
env_logger = "0.11"
filetime = "0.2"
fs2 = "0.4"
futures = "0.3"
futures-core = "0.3"
ignore = "0.4"
indexmap = "2"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
log = "0.4"
num_cpus = "1.17.0"
once_cell = "1.21"
owo-colors = { version = "4.1", default-features = false }
parking_lot = "0.12"
prost = "0.14"
prost-types = "0.14"
rand = "0.9"
reflink-copy = "0.1"
rocksdb = "0.24.0"
russh = { version = "0.54", default-features = false, features = ["ring", "rsa", "flate2"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "signal", "process"] }
tokio-stream = { version = "0.1" , features = ["io-util"]}
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1.18", features = ["v4", "v5", "v7"] }

[dev-dependencies]
anyhow = "1.0"
rayon = "1.11"
rand_chacha = "0.9"
rand_distr = "0.5"
russh-sftp = ">=2.0.8"
serial_test = "3.2"

[build-dependencies]
tonic-build = { package = "tonic-prost-build", version = "0.14" }

[profile.test]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
lto = "off"

[profile.dev.package."*"]
opt-level = 0

[profile.release]
opt-level = 3         # Enables maximum optimisation
debug = false         # Removes debug information to reduce binary size
lto = true            # Enables Link Time Optimisation for better performance
codegen-units = 1     # Improves optimisation by allowing the compiler to optimise across the entire crate
panic = 'abort'       # Reduces binary size and potentially improves performance by aborting on panic

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"